fix entry schema
