# server/api/go/model_private_entry.go
@@ -1,27 +1,0 @@
-/*
- * CodeBattle API
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 1.0.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-type PrivateEntry struct {
-
-	Id string `json:"id"`
-
-	Name string `json:"name"`
-
-	User User `json:"user"`
-
-	Score int32 `json:"score"`
-
-	Repository string `json:"repository"`
-
-	Status string `json:"status"`
-
-	Error string `json:"error,omitempty"`
-}
